semantic/src/test_cases/error/test2.cl
class Main{
	func3 () : Bool {
		6
	};

	func1 () : Int {
		2
	};
	
	func1() : String{
		"4"
	};
	main() : Int {
		0
	};
};
